[gd_scene load_steps=6 format=3 uid="uid://ddu0bfl8qw1s8"]

[ext_resource type="Script" path="res://addons/audio_node_wrangler/ui/audio_node_wrangler_ui.gd" id="1_6panv"]
[ext_resource type="Texture2D" uid="uid://bdd5plkcole64" path="res://addons/audio_node_wrangler/ui/Search.svg" id="2_n3f52"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6375"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439216, 0.439216, 0.439216, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="ButtonGroup" id="ButtonGroup_shc02"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2gh5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439216, 0.439216, 0.439216, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="SoundMgrUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_6panv")
mouse_over_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
row_outline_color = Color(0, 0.635294, 0.996078, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="AudioNodeWranglerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Audio Node Wrangler"

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScanProjectBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
tooltip_text = "Scan project for audio stream nodes - keeps any setting changes"
text = "Scan Project"

[node name="ResetSettingsBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
tooltip_text = "Scan project for audio stream nodes - discarding any changes"
text = "Reset All"

[node name="ApplySettingsBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Apply changes to scene files"
text = "Apply"

[node name="ShowDataFileBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
layout_mode = 2
tooltip_text = "Opens file manager navigated to the data file"
text = "Show Data File"

[node name="CloseBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="HFlowContainer" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 40
alignment = 1

[node name="GroupByPanelContainer" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q6375")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GroupByHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer"]
layout_mode = 2

[node name="GroupByLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer/GroupByHBoxContainer"]
layout_mode = 2
text = "Group By:"

[node name="GroupByAudioResRdo" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer/GroupByHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Group entries by audio resource file"
button_pressed = true
button_group = SubResource("ButtonGroup_shc02")
text = "Audio Resource"

[node name="GroupBySceneRdo" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer/GroupByHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Group entries by scene file"
button_group = SubResource("ButtonGroup_shc02")
text = "Scene"

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g2gh5")

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="FilterHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer"]
layout_mode = 2
text = "Filter:"

[node name="FilterLineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
tooltip_text = "Filter by match String"
placeholder_text = "Filter Audio Info Tree"
clear_button_enabled = true
right_icon = ExtResource("2_n3f52")
caret_blink = true
caret_blink_interval = 0.5

[node name="BusFilterLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer"]
layout_mode = 2
text = "Bus"

[node name="BusFilterOptionBtn" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Filter by audio bus"

[node name="ActiveInstancesChk" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Only show entries with instances of audio nodes"
text = "Instances"

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 40

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 7
column_titles_visible = true
hide_root = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(800, 480)
dialog_autowrap = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(800, 480)
dialog_text = "Please close the following scenes to continue with applying sound changes."
dialog_autowrap = true

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TopHBoxContainer/ScanProjectBtn" to="." method="_on_scan_project_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TopHBoxContainer/ResetSettingsBtn" to="." method="_on_reset_settings_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TopHBoxContainer/ApplySettingsBtn" to="." method="_on_apply_settings_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TopHBoxContainer/ShowDataFileBtn" to="." method="_on_show_data_file_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TopHBoxContainer/CloseBtn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer/GroupByHBoxContainer/GroupByAudioResRdo" to="." method="_on_group_by_rdo_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HFlowContainer/GroupByPanelContainer/MarginContainer/GroupByHBoxContainer/GroupBySceneRdo" to="." method="_on_group_by_rdo_pressed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer/FilterLineEdit" to="." method="_on_filter_line_edit_text_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer/BusFilterOptionBtn" to="." method="_on_bus_filter_option_btn_item_selected"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HFlowContainer/PanelContainer/MarginContainer/FilterHBoxContainer/ActiveInstancesChk" to="." method="_on_active_instances_chk_pressed"]
[connection signal="button_clicked" from="Panel/MarginContainer/VBoxContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="gui_input" from="Panel/MarginContainer/VBoxContainer/Tree" to="." method="_on_tree_gui_input"]
[connection signal="item_edited" from="Panel/MarginContainer/VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="custom_action" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_custom_action"]
[connection signal="canceled" from="AcceptDialog" to="." method="_on_accept_dialog_canceled"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
[connection signal="custom_action" from="AcceptDialog" to="." method="_on_accept_dialog_custom_action"]
